Update: make the width fixed for the container and align it in center horizontally

--- a/index.css
+++ b/index.css
@@ -2,6 +2,9 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
@@ -12,6 +15,9 @@ body {
 
 .container {
   min-height: 100%;
+  width: 100%;
+  max-width: 1000px;
+  margin: 10px auto 0;
 }
 
 .content {
